# parallax-runtime

./: .gitignore  CMakeLists.txt  README.md  deploy_linux.sh
.cache/clangd/index/: cache.cpp.ED50F7CEB5659B02.idx  device.cpp.0FF22F882370855A.idx  kernel_launcher.cpp.47572DB84209087F.idx  kernel_launcher.hpp.37493A883F36D9A8.idx  runtime.h.9F8A90294CE704C2.idx  runtime.hpp.21ACA878A07D7DAF.idx  test_vulkan_backend.cpp.71194928397976A1.idx  unified_allocator.cpp.31A2F84480D5184B.idx  unified_buffer.cpp.9B163AC8AEDFA76F.idx  unified_buffer.hpp.2D439FB95980B758.idx  vulkan_backend.hpp.AEE02819EC276E0E.idx
.github/workflows/: build.yml
include/parallax/: allocator.hpp  arena.hpp  heap_pool.hpp  kernel_launcher.hpp  runtime.h  runtime.hpp  stdpar.hpp  unified_buffer.hpp  vulkan_backend.hpp
include/parallax/shaders/: vector_multiply.hpp
shaders/: bitonic.comp  compile.sh  flags.comp  generate_header.py  reduce.comp  relocate.comp  scan.comp  scan_add.comp  scatter.comp  temp.hpp  vector_multiply.comp  vector_multiply.spv  vector_multiply_spv.hpp
src/backend/vulkan/: device.cpp
src/kernel/: cache.cpp  kernel_launcher.cpp
src/memory/: arena.cpp  heap_capture.cpp  heap_pool.cpp  interpose.cpp  unified_allocator.cpp  unified_buffer.cpp
tests/: CMakeLists.txt
tests/unit/: test_arena.cpp  test_copy_if.cpp  test_heap.cpp  test_interpose.cpp  test_physptr.cpp  test_reduce.cpp  test_scan.cpp  test_sort.cpp  test_staging.cpp  test_vulkan_backend.cpp
